implementation of swagger, added requests and prepared for render.com
